test/should_fail/inh_009.grg
using inh_model_009;

rule bla { pattern{} replace{} }
